# Eggcrypt

./: LICENSE  README.md  pyproject.toml  setup.py
eggcrypt/: __init__.py  egg.py
